src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Allow_Monthly_Accounting_Fee_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Monthly Accounting Fee Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostExternalDataProvider__c</fullName>
        <label>Cost – External Data Provider</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostLeadInvestigation__c</fullName>
        <label>Cost – Lead Investigation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostProspectingActions__c</fullName>
        <label>Cost – Prospecting Actions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disable_Instant_Adjudication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Instant Adjudication</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AU_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Coupon_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.AU_Campaign,Campaign.AU_Offer</value>
        </filters>
        <label>AU Campaigns</label>
        <sharedTo>
            <group>AU_Roles_Except_VCC</group>
            <role>DirectorInsideSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Drop_Date__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>of_Members__c</columns>
        <columns>PARENT_ID</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>Coupon_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Direct Mail</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>WEX Universal</value>
        </filters>
        <label>All Active Campaigns GW</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Engagement_Marketing_Campaigns</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Coupon_Code__c</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Boyd</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Natale</value>
        </filters>
        <label>Engagement Marketing Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CorporatePay,Campaign.CorporatePay_Events_Master,Campaign.CorporatePay_Parent</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>WES_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.WES_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>WES - Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>WES_All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.WES_Campaign</value>
        </filters>
        <label>WES - All Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>CorporatePay</fullName>
        <active>true</active>
        <label>Virtual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CorporatePay_Parent</fullName>
        <active>true</active>
        <description>Roll up campaign records</description>
        <label>Virtual Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>WES_Campaign</fullName>
        <active>true</active>
        <description>Used for WES Campaigns</description>
        <label>WES Campaign</label>
    </recordTypes>
</CustomObject>